@@ -1,5 +1,10 @@
 2007-08-26  Paolo Borelli  <pborelli@katamail.com>
 
+	* gtksourceview/language-specs/oblivion.lang: add oblivion style
+	scheme so that we have one dark scheme included.
+
+2007-08-26  Paolo Borelli  <pborelli@katamail.com>
+
 	* gtksourceview/language-specs/erlang.lang: erlang syntax.
 
 2007-08-26  Paolo Borelli  <pborelli@katamail.com>
